--- a/braket.html
+++ b/braket.html
@@ -18,7 +18,7 @@
   <a href="#top"><span >สายบน</span></a>
   <a href="#buttom"><span>สายล่าง</span></a>
 </div>
-<div class="menu2"><a href="https://back-end-y49i.onrender.com"><span id="admin">admin</span></a></div>
+<!--<div class="menu2"><a href="https://back-end-y49i.onrender.com"><span id="admin">admin</span></a></div>-->
 <body>
   <h2 id="top">รอบชิง</h2>
   <div class="element"><div id="tournament3"></div></div>
