--- a/braket.html
+++ b/braket.html
@@ -15,16 +15,16 @@
   <title>SAPA E-Sport 2025</title>
 </head>
 <div class="menu">
-  <a href="#top"><span >สายบน</span></a>
-  <a href="#buttom"><span>สายล่าง</span></a>
+  <a href="#top"><span style="color: green;">สายบน</span></a>
+  <a href="#buttom"><span style="color: red;"> สายล่าง</span></a>
 </div>
 <!--<div class="menu2"><a href="https://back-end-y49i.onrender.com"><span id="admin">admin</span></a></div>-->
 <body>
-  <h2 id="top">รอบชิง</h2>
+  <h2 id="top">รอบชิง👑</h2>
   <div class="element"><div id="tournament3"></div></div>
-  <h2 id="top">ทีมสายบน</h2>
+  <h2 id="top" >ทีมสายบน⚔</h2>
   <div class="element"><div id="tournament"></div></div>
-  <h2 id="buttom">ทีมสายล่าง</h2>
+  <h2 id="buttom">ทีมสายล่าง🗡</h2>
   <div class="element"><div id="tournament2"></div></div>
   <script src="braket.js"></script>
 </body>
