--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
 
   <body>
 
-      <!--<div class="mobile-cover-video">
-        <video autoplay muted loop playsinline>
-          <source src="mobile01.mp4" type="video/mp4">
-          เบราว์เซอร์ของคุณไม่รองรับวิดีโอ
-        </video>
-      </div>-->
-
       <!-- VDO BG -->
       <video autoplay muted loop playsinline id="bgVideo">
         <source src="bg01.webm" type="video/webm" />
@@ -57,22 +50,22 @@
           </div>
 
           <div class="card" style="width:50%; margin-left: 0;">
-            <a href="" target="_self">
+            <a href="https://www.instagram.com/bspwit.sapa?utm_source=ig_web_button_share_sheet&igsh=bGI4cHg3Ym15c3Bj" target="_self">
               <div class="box1">
-                <h2 id="myBtn">ลงทะเบียน</h2>
+                <h2 id="myBtn">ช่องทางติดต่อ</h2>
               </div>
             </a>
 
             <a href="https://docs.google.com/spreadsheets/d/19xKETrp_Hu64OZP5bObaI1AzbglpTLk6VRg7ZKPh4q4/edit?gid=1386834576#gid=1386834576"
               target="_blank">
               <div class="box2">
-                <h2>ตรวจสอบ</h2>
+                <h2>ตรวจสอบผลการลงทะเบียน</h2>
               </div>
             </a>
 
             <a href="rule.html" target="_blank">
               <div class="box3">
-                <h2>ข้อควรรู้</h2>
+                <h2>ข้อควรรู้ก่อนแข่ง</h2>
               </div>
             </a>
 
