--- a/rule.html
+++ b/rule.html
@@ -40,7 +40,7 @@
                             <p class="lead text-white-50 mb-4">เว็บเพจนี้ใช้เพื่อแสดงกฎและกติกาการแข่งขันROVที่ถูกจัดโดยสภานักเรียนโรงเรียนบางสะพานวิทยา</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">เริ่มกันเลย!</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="https://bangsaphanwittaya-sapa-e-sport.vercel.app/">กลับสู่หน้าลงทะเบียน</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="index.html">กลับสู่หน้าลงทะเบียน</a>
                             </div>
                         </div>
                     </div>
