--- a/braket.html
+++ b/braket.html
@@ -26,6 +26,8 @@
   <div class="element"><div id="tournament"></div></div>
   <h2 id="buttom">ทีมสายล่าง🗡</h2>
   <div class="element"><div id="tournament2"></div></div>
+  <h2 id="buttom">ทีมสายล่าง🗡🗡</h2>
+  <div class="element"><div id="tournament22"></div></div>
   <script src="braket.js"></script>
 </body>
   <script>
@@ -51,6 +53,7 @@ $(function () {
   $('#tournament').bracket({ init: data, ...bracketOptions }); 
   $('#tournament2').bracket({ init: tada, ...bracketOptions }); 
   $('#tournament3').bracket({ init: oneonone, ...bracketOptions }); 
+  $('#tournament22').bracket({ init: tadada, ...bracketOptions }); 
 });
 
 // ปรับขนาดอัตโนมัติเมื่อ resize
@@ -60,6 +63,7 @@ $(window).on('resize', function() {
   $('#tournament').bracket({ init: data, ...bracketOptions }); 
   $('#tournament2').bracket({ init: tada, ...bracketOptions }); 
   $('#tournament3').bracket({ init: oneonone, ...bracketOptions }); 
+  $('#tournament22').bracket({ init: tadada, ...bracketOptions }); 
 });
 </script>
 
